--- a/Digital Watch/index.html
+++ b/Digital Watch/index.html
@@ -14,23 +14,26 @@
     />
   </head>
   <body>
-    <div class="digital-clock">
-      <div class="time-container hours-box">
-        <div class="hours">11</div>
-        <span class="tag">Hours</span>
+    <div class="container">
+      <div class="digital-clock">
+        <div class="time-container hours-box">
+          <div class="hours">11</div>
+          <span class="tag">Hours</span>
+        </div>
+        <div class="time-container minutes-box">
+          <div class="minutes">30</div>
+          <span class="tag">Minutes</span>
+        </div>
+        <div class="time-container seconds-box">
+          <div class="seconds">45</div>
+          <span class="tag">Seconds</span>
+          <span class="stat"></span>
+        </div>
       </div>
-      <div class="time-container minutes-box">
-        <div class="minutes">30</div>
-        <span class="tag">Minutes</span>
-      </div>
-      <div class="time-container seconds-box">
-        <div class="seconds">45</div>
-        <span class="tag">Seconds</span>
-        <span class="stat"></span>
-      </div>
+      <div class="box-1"></div>
+      <div class="box-2"></div>
     </div>
-    <div class="box-1"></div>
-    <div class="box-2"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
